--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+   background-color: white;
+   
+    min-height: 100vh;
+    font-family: 'Roboto Mono', monospace;
+    overflow: hidden !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+
+    animation: from-top-bottom 0.8s ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loading-page{
+animation: from-top-bottom 0.8s ease;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+select {
+    font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quaPage{
+    animation: from-top-bottom 0.8s ease;
 }
+.qus{
+    animation: from-top-bottom 0.8s ease;
+}
+
+
+@media only screen and (max-width: 620px) {
+    select {
+        font-size: 14px;
+
+    }
+}
+
+@keyframes from-top-bottom {
+
+0% {
+        transform: translateX(-50%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+    
+}
+
+@media only screen and (max-width: 620px) {
+    .from-home {
+        width: 90%;
+    }
+}
+
+
+
