--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,9 @@ select {
     animation: from-top-bottom 0.8s ease;
 }
 
+.eval{
+    max-height: 200px;
+}
 
 @media only screen and (max-width: 620px) {
     select {
@@ -68,6 +71,13 @@ select {
 @media only screen and (max-width: 620px) {
     .from-home {
         width: 90%;
+    }
+}
+
+@media only screen and (max-width:640px){
+
+    .side{
+       width: 60px;
     }
 }
 
