--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,23 @@ select {
 .eval{
     max-height: 200px;
 }
+.closePage{
+        position: fixed;
+        top: 50vh;
+        left: 50vw;
+        transform: translate(-50%, -50%);
+}
+.modal::backdrop{
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100vh;
+        background: rgba(130, 131, 132, 0.6);
+    
+}
+
 
 @media only screen and (max-width: 620px) {
     select {
