--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,10 @@ animation: from-top-bottom 0.8s ease;
 
 select {
     font-size: 16px;
-    color:white;
+}
+option{
+    background-color: white
+    color:black;
 }
 
 .quaPage,
